[gd_scene load_steps=51 format=2]

[ext_resource path="res://test/packed_state/input_state.gd" type="Script" id=1]
[ext_resource path="res://HUD/healthbar.gd" type="Script" id=2]
[ext_resource path="res://test/distributed_state/hitbox/hitbox_group.tscn" type="PackedScene" id=3]
[ext_resource path="res://test/distributed_state/hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://fighting/distributed_fighter/mixin/step_forward.tscn" type="PackedScene" id=5]
[ext_resource path="res://fighting/distributed_fighter/fighters/cosito/state/attack_landed.tscn" type="PackedScene" id=6]
[ext_resource path="res://fighting/distributed_fighter/fighters/cosito/state/attack.tscn" type="PackedScene" id=7]
[ext_resource path="res://fighting/distributed_fighter/state/transitions/input_step.tscn" type="PackedScene" id=8]
[ext_resource path="res://shader/red_dither.tres" type="Material" id=9]
[ext_resource path="res://asset/font/proggy_clean.tres" type="DynamicFont" id=10]
[ext_resource path="res://fighting/distributed_fighter/fighters/fighter/fighter.gd" type="Script" id=11]
[ext_resource path="res://test/packed_state/packed_state_machine.gd" type="Script" id=12]
[ext_resource path="res://fighting/distributed_fighter/state/dead.tscn" type="PackedScene" id=13]
[ext_resource path="res://fighting/combo/state_buffer.tscn" type="PackedScene" id=14]
[ext_resource path="res://util/free_in_release.gd" type="Script" id=15]
[ext_resource path="res://fighting/distributed_fighter/fighters/fighter/hitbox_manager.gd" type="Script" id=16]
[ext_resource path="res://fighting/distributed_fighter/state/rebound.tscn" type="PackedScene" id=17]
[ext_resource path="res://fighting/distributed_fighter/state/air_flinch.tscn" type="PackedScene" id=18]
[ext_resource path="res://fighting/distributed_fighter/state/jump.tscn" type="PackedScene" id=19]
[ext_resource path="res://fighting/distributed_fighter/state/turn_around.tscn" type="PackedScene" id=20]
[ext_resource path="res://fighting/distributed_fighter/state/idle.tscn" type="PackedScene" id=21]
[ext_resource path="res://fighting/distributed_fighter/state/transitions/transitions.tscn" type="PackedScene" id=22]
[ext_resource path="res://fighting/distributed_fighter/state/flinch.tscn" type="PackedScene" id=23]
[ext_resource path="res://fighting/distributed_fighter/state/dead_air.tscn" type="PackedScene" id=24]
[ext_resource path="res://fighting/distributed_fighter/state/walk.tscn" type="PackedScene" id=25]
[ext_resource path="res://fighting/distributed_fighter/state/air_no_wall.tscn" type="PackedScene" id=26]
[ext_resource path="res://fighting/distributed_fighter/state/triggers/on_finish.tscn" type="PackedScene" id=27]
[ext_resource path="res://fighting/distributed_fighter/state/triggers/change_state_on_floor.tscn" type="PackedScene" id=28]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 4, 4 )

[sub_resource type="StreamTexture" id=40]
load_path = "res://.import/cosito_tirapiña.png-85fbfdfb39a67d0b8aa2dce79fa15fdd.stex"

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.341176, 0, 0, 1 )

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}

[sub_resource type="Animation" id=28]
resource_name = "damage"
length = 0.0833333
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), null ]
}

[sub_resource type="Animation" id=38]
length = 0.001

[sub_resource type="Animation" id=39]
resource_name = "hitstun"
length = 0.133333
loop = true
step = 0.0333333

[sub_resource type="Animation" id=14]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/hitbox/main:active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0.0, 3.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4.0 ]
}

[sub_resource type="Animation" id=41]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4.0 ]
}

[sub_resource type="Animation" id=10]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5.0 ]
}

[sub_resource type="Animation" id=11]
length = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "turn_around"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6.0 ]
}

[sub_resource type="Animation" id=12]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1.0, 0.0, 2.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 4, 4 )

[node name="cosito_tirapiña" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 11 )
max_health = 10.0
health = 10.0
gravity = 300.0
walk_speed = 40.0
walk_lerp = 30.0
run_speed = 60.0
air_walk_speed = 0.0
air_walk_lerp = 0.0
air_run_speed = 0.0
air_run_lerp = 0.0
air_idle_lerp = 0.0
idle_lerp = 15.0
jump_speed = 100.0

[node name="state_machine" type="Node" parent="."]
script = ExtResource( 12 )
start_state = "idle"
root = NodePath("..")

[node name="idle" parent="state_machine" instance=ExtResource( 21 )]

[node name="transitions" parent="state_machine/idle" instance=ExtResource( 22 )]

[node name="attack" parent="state_machine/idle/transitions" instance=ExtResource( 8 )]
end_state = "attack"
B = 3

[node name="jump" parent="state_machine/idle/transitions" instance=ExtResource( 8 )]
end_state = "jump"
A = 1

[node name="turn_around" parent="state_machine/idle/transitions" instance=ExtResource( 8 )]
end_state = "turn_around"
horizontal_dir = -1

[node name="walk" parent="state_machine/idle/transitions" instance=ExtResource( 8 )]
end_state = "walk"
horizontal_dir = 1

[node name="land" parent="state_machine" instance=ExtResource( 21 )]
animation = "land"

[node name="on_finish" parent="state_machine/land" instance=ExtResource( 27 )]

[node name="change_state_on_floor" parent="state_machine/land" instance=ExtResource( 28 )]

[node name="walk" parent="state_machine" instance=ExtResource( 25 )]

[node name="transitions" parent="state_machine/walk" instance=ExtResource( 22 )]

[node name="attack" parent="state_machine/walk/transitions" instance=ExtResource( 8 )]
end_state = "attack"
B = 3

[node name="jump" parent="state_machine/walk/transitions" instance=ExtResource( 8 )]
end_state = "jump"
A = 1

[node name="turn_around" parent="state_machine/walk/transitions" instance=ExtResource( 8 )]
end_state = "turn_around"
horizontal_dir = -1

[node name="idle" parent="state_machine/walk/transitions" instance=ExtResource( 8 )]
end_state = "idle"
horizontal_dir = 2

[node name="air" parent="state_machine" instance=ExtResource( 26 )]

[node name="on_floor" parent="state_machine/air" index="0"]
state_to = "land"

[node name="flinch" parent="state_machine" instance=ExtResource( 23 )]
animation = "flinch"

[node name="air_flinch" parent="state_machine" instance=ExtResource( 18 )]
animation = "air_flinch"

[node name="dead" parent="state_machine" instance=ExtResource( 13 )]
animation = "dead"

[node name="rebound" parent="state_machine" instance=ExtResource( 17 )]

[node name="jump" parent="state_machine" instance=ExtResource( 19 )]
jump_lag = 0.1
jump_config = [ [ 0.9, 1.0 ], [ 0.0, 1.0 ] ]

[node name="turn_around" parent="state_machine" instance=ExtResource( 20 )]

[node name="dead_air" parent="state_machine" instance=ExtResource( 24 )]
animation = "dead_air"

[node name="attack" parent="state_machine" instance=ExtResource( 7 )]
animation = "attack"
jumping = false

[node name="attack_landed" parent="state_machine" instance=ExtResource( 6 )]

[node name="pivot" type="Node2D" parent="."]
use_parent_material = true

[node name="hitbox" type="Node2D" parent="pivot"]
script = ExtResource( 16 )

[node name="main" parent="pivot/hitbox" instance=ExtResource( 3 )]
active = true

[node name="hurtbox" parent="pivot/hitbox/main" instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/hitbox/main/hurtbox"]
position = Vector2( 0, 4 )
shape = SubResource( 17 )

[node name="Sprite" type="Sprite" parent="pivot"]
use_parent_material = true
texture = SubResource( 40 )
hframes = 3
vframes = 3
frame = 2
__meta__ = {
"_editor_description_": "YXNlcHJpdGVfd2l6YXJkX2NvbmZpZwpwbGF5ZXJ8PXN0YXRlX2FuaW1hdGlvbgpzb3VyY2V8PXJlczovL2Fzc2V0L2FzZXByaXRlL2Nvc2l0b190aXJhcGnDsWEuYXNlcHJpdGUKbGF5ZXJ8PQpvcF9leHB8PUZhbHNlCm9fZm9sZGVyfD1yZXM6Ly9hc3NldC90ZXh0dXJlL2ZpZ2h0ZXJfc2hlZXQKb19uYW1lfD0Kb25seV92aXNpYmxlfD1UcnVlCm9fZXhfcHw9Cg=="
}

[node name="input_state" type="Node" parent="."]
script = ExtResource( 1 )

[node name="healthbar" type="ProgressBar" parent="."]
margin_left = -8.0
margin_top = -16.0
margin_right = 8.0
margin_bottom = -15.0
custom_styles/fg = SubResource( 25 )
custom_styles/bg = SubResource( 26 )
value = 100.0
percent_visible = false
script = ExtResource( 2 )

[node name="damage_animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 27 )
anims/damage = SubResource( 28 )

[node name="hitstun_animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 38 )
anims/hitstun = SubResource( 39 )

[node name="state_label" type="Label" parent="."]
margin_left = -19.0
margin_top = -32.0
margin_right = 21.0
margin_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 10 )
text = "state"
align = 1
valign = 1

[node name="free_in_release" type="Node" parent="state_label"]
script = ExtResource( 15 )

[node name="state_animation" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/RESET = SubResource( 14 )
anims/air = SubResource( 2 )
anims/air_flinch = SubResource( 3 )
anims/attack = SubResource( 4 )
anims/dead = SubResource( 5 )
anims/dead_air = SubResource( 6 )
anims/flinch = SubResource( 7 )
anims/idle = SubResource( 8 )
anims/jump = SubResource( 9 )
anims/land = SubResource( 41 )
anims/rebound = SubResource( 10 )
anims/turn_around = SubResource( 11 )
anims/walk = SubResource( 12 )

[node name="state_buffer" parent="." instance=ExtResource( 14 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 13 )

[node name="step_forward" parent="." instance=ExtResource( 5 )]

[connection signal="health_changed" from="." to="healthbar" method="_on_health_changed"]
[connection signal="physics_process" from="state_machine" to="state_buffer" method="_physics_update"]
[connection signal="state_changed" from="state_machine" to="state_label" method="set_text"]
[connection signal="state_changed" from="state_machine" to="state_buffer" method="_on_state_changed"]

[editable path="state_machine/air"]
